# AegisCI

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.gateway  LICENSE  Makefile  README.md  TRAINING.md  docker-compose.yml  gateway_test_utils.py  install.sh  pyproject.toml  report_test.json  report_test.md  requirements.txt  test_model.py
.github/workflows/: ci.yml  guardian.yml  release.yml
artifacts/: rag_store.db
artifacts/dl/: binary_classifier.pt  enhanced_models_manifest.json  ensemble_enhanced.pt  gnn_enhanced.pt  gnn_eval.json  pipeline_results.json  transformer_enhanced.pt  transformer_eval.json
backend/: celery_app.py  config.py  dashboard.py  db.py  demo_report_fixture.json  exceptions.py  logging_config.py  main.py  middleware.py  models.py  policy_utils.py  schemas.py  services.py  tasks.py
backend/integrations/: gateway_events.py  github.py
backend/rendering/: pr_comment.py
data/: README.md  labeling_guide.md
data/rules/: high_precision_allowlist.txt
data/semgrep-rules/: js-basic.yml  org-super-max.yml
datasets/: weak_labels.jsonl
datasets/gold/: gold_labels.jsonl
demo_pack/: README.md
demo_pack/agent_gateway_demo/: README.md  run_demo.sh
demo_pack/python_demo/: README.md  demo_report.json  run_demo.sh
demo_pack/scripts/: check_prereqs.sh  setup_all.sh
demo_pack/ts_demo/: README.md  demo_report.json  run_demo.sh
deploy/gcp/: build_train_image.sh  build_validator_image.sh  cloudbuild.backend.yaml  cloudbuild.train.yaml  cloudbuild.validate.yaml  cloudbuild.validator.yaml  config.env  deploy_backend.sh  enable_apis.sh  run_vertex_train.sh  sync_datasets.sh  sync_models.sh  sync_repos.sh  validate_patch_cloudbuild.sh
docker/: backend.Dockerfile  train.Dockerfile  validator.Dockerfile
docs/: FINAL_AUDIT.md  GCP_DEPLOY.md
frontend/: next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  format.ts
frontend/scripts/: run-ui-tests.js
frontend/tests/: dashboard.spec.ts
gateway/: .eslintrc.cjs  package-lock.json  package.json  policy.yaml  tsconfig.json
gateway/scripts/: gateway_cli.ts
gateway/src/: index.ts  policy.ts  redact.ts  safe_output.ts  types.ts  validator.ts
guardian/: cli.py  config.py  findings.py  git_utils.py  report.py  ui.py  version.py
guardian/data/: __init__.py  extract_python.py  extract_ts.py  gold_schema.py  label_cli.py  labels.py  mapping.py  sampling.py  schema.py  split.py  validate.py  weak_labeling.py
guardian/scanners/: __init__.py  bandit_scanner.py  dependency_scanner.py  pattern_scanner.py  secrets_scanner.py  (+1 more)
ml/: __init__.py  cloud_train.py  consensus.py  data_pipeline.py  ensemble.py  evaluate.py  evaluate_gnn.py  generate_enhanced_dataset.py  inference.py  integrated_pipeline.py  train_binary_focused.py  train_gnn.py  train_pipeline.py  train_transformer.py
model_service/: __init__.py  schemas.py
patcher/: __init__.py  diff.py  llm_client.py  orchestrator.py  patcher.py  policy.py  ranker.py  train_ranker.py  types.py
rag/: embeddings.py  indexer.py  retriever.py
scripts/: README.md  auto_label.py  build_dataset.py  cleanup_for_production.sh  comment_updater_dryrun.js  comment_updater_dryrun.test.js  enhance_dataset.py  enhanced_pipeline.py  improve_dataset.py  label_gold.py  post_report.py  quickstart.sh  setup_for_github.sh  weak_label.py
tests/: test_augmentation_determinism.py  test_backend_health.py  test_build_dataset_e2e.py  test_config_org_repo_api.py  test_dashboard_gateway_api.py  test_dashboard_patches_api.py  test_dashboard_reports_api.py  test_dataset_balance.py  test_dataset_schema.py  test_demo_pack_gateway.py  test_demo_pack_python.py  test_demo_pack_ts.py  test_diff.py  test_dl_embeddings_fallback.py  test_dl_embeddings_train_smoke.py  test_dl_reranker_integration.py  test_enhanced_scanners.py  test_ensemble_weighted.py  test_extract_python.py  test_extract_ts.py  test_findings_normalize.py  test_gateway_audit_logging.py  test_gateway_end_to_end.py  test_gateway_policy_allowed_denied.py  test_gateway_policy_schema_validation.py  test_gateway_redaction.py  test_gateway_safe_output.py  test_github_dry_run.py  test_gnn_collate.py  test_gold_schema.py  test_graph_bounds.py  test_inference_contract.py  test_ingest_report.py  test_job_store.py  test_label_cli_resume.py  test_llm_diff_only_enforcement.py  test_llm_patch_policy.py  test_llm_provider_switching.py  test_ood_distance.py  test_ood_entropy.py  (+30 more)
validator/: runner.py
(+72 files in other folders)
