[project]
name = "securedev-guardian"
version = "0.1.0"
description = "Starter baseline for SecureDev Guardian (CLI + backend)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
]

[project.scripts]
guardian = "guardian.cli:app"

[tool.setuptools.packages.find]
include = ["guardian*"]

[tool.ruff]
line-length = 100
target-version = "py311"
