[project]
name = "securedev-guardian"
version = "0.1.0"
description = "Starter baseline for SecureDev Guardian (CLI + backend)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "celery>=5.3.6",
  "redis>=5.0.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "scikit-learn>=1.4.0",
  "tree_sitter>=0.20.1,<0.21.0",
  "tree_sitter_languages>=1.10.2",
  "torch>=2.1.0",
  "transformers>=4.41.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "types-requests>=2.32.0.20240712",
]

[project.scripts]
guardian = "guardian.cli:app"

[tool.setuptools.packages.find]
include = ["backend*", "guardian*", "llm*", "ml*", "model_service*", "patcher*", "rag*", "validator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
explicit_package_bases = true
