[project]
name = "securedev-guardian"
version = "1.0.0"
description = "AI-powered security scanner with automated vulnerability detection and patching recommendations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = [
  "security",
  "vulnerability",
  "scanner",
  "bandit",
  "semgrep",
  "sast",
  "code-analysis",
  "devsecops",
  "appsec"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.5.2,<14",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "celery>=5.3.6",
  "redis>=5.0.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.0",
  "structlog>=24.1.0",
  "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/securedev-guardian"
Documentation = "https://github.com/yourusername/securedev-guardian#readme"
Repository = "https://github.com/yourusername/securedev-guardian.git"
Issues = "https://github.com/yourusername/securedev-guardian/issues"
Changelog = "https://github.com/yourusername/securedev-guardian/releases"

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "scikit-learn>=1.4.0",
  "semgrep>=1.90.0",
  "tree_sitter>=0.20.1,<0.21.0",
  "tree_sitter_languages>=1.10.2",
  "torch>=2.1.0",
  "transformers>=4.41.0",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "types-requests>=2.32.0.20240712",
]

[project.scripts]
guardian = "guardian.cli:app"
securedev = "guardian.cli:app"

[tool.setuptools.packages.find]
include = ["backend*", "guardian*", "llm*", "ml*", "model_service*", "patcher*", "rag*", "validator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
explicit_package_bases = true
